--- a/html-source/index.html
+++ b/html-source/index.html
@@ -1,143 +1,211 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <style>
-        .my-footer {
-            height: 4em;
-            background-color: dimgray;
-            margin-top: 1.5em;
-            padding: 1em;
-            color: white;
-            font-size: 80%;
-        }
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/notie/dist/notie.min.css"
+    />
 
-    </style>
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css" />
     <title>What the fuck!</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Rooms
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="generals.html">General's Quarters</a></li>
-                  <li><a class="dropdown-item" href="majors.html">Major's Sutie</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book Now</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contacts</a>
-              </li>
-            </ul>   
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Rooms
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="generals.html"
+                    >General's Quarters</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="majors.html">Major's Sutie</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="reservation.html"
+                tabindex="-1"
+                aria-disabled="true"
+                >Book Now</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="contact.html"
+                tabindex="-1"
+                aria-disabled="true"
+                >Contacts</a
+              >
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
-      <div id="main-carousel" class="carousel slide carousel-fade " data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div
+      id="main-carousel"
+      class="carousel slide carousel-fade"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#main-carousel"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#main-carousel"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#main-carousel"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="static/images/abstract.jpg"
+            class="d-block w-100"
+            alt="abstract"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>abstract</h5>
+            <p>beautiful printing.</p>
+          </div>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="static/images/abstract.jpg" class="d-block w-100" alt="abstract">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>abstract</h5>
-                <p>beautiful printing.</p>
-              </div>
+        <div class="carousel-item">
+          <img
+            src="static/images/business.jpg"
+            class="d-block w-100"
+            alt="business"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>business</h5>
+            <p>Some representative placeholder content for the first slide.</p>
           </div>
-          <div class="carousel-item">
-            <img src="static/images/business.jpg" class="d-block w-100" alt="business">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>business</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-          </div>
-          <div class="carousel-item">
-            <img src="static/images/tech.jpg" class="d-block w-100" alt="tech">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>tech</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
+        </div>
+        <div class="carousel-item">
+          <img src="static/images/tech.jpg" class="d-block w-100" alt="tech" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>tech</h5>
+            <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
       </div>
+    </div>
 
     <div class="container">
-
-        <div class="row">
-            <div class="col">
-                <h1 class="text-center mt-4">Welcom to my coding world!!</h1>
-                <p>
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                    this is the testing page. and build by golang! and enjoy your life~ together!
-                </p>
-            </div>
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center mt-4">Welcom to my coding world!!</h1>
+          <p>
+            this is the testing page. and build by golang! and enjoy your life~
+            together! this is the testing page. and build by golang! and enjoy
+            your life~ together! this is the testing page. and build by golang!
+            and enjoy your life~ together! this is the testing page. and build
+            by golang! and enjoy your life~ together! this is the testing page.
+            and build by golang! and enjoy your life~ together! this is the
+            testing page. and build by golang! and enjoy your life~ together!
+            this is the testing page. and build by golang! and enjoy your life~
+            together! this is the testing page. and build by golang! and enjoy
+            your life~ together!
+          </p>
         </div>
+      </div>
 
-        <div class="row">
-            <div class="col text-center">
-                <button type="button" class="btn btn-warning">Make Reservation Now</button>
-            </div>
+      <div class="row">
+        <div class="col text-center">
+          <button type="button" class="btn btn-warning">
+            Make Reservation Now
+          </button>
         </div>
-
-
-
+      </div>
     </div>
 
     <div class="row my-footer">
-        <div class="col">
-            Left
-        </div>
-        <div class="col">
-            Middle
-        </div>
-        <div class="col">
-            Right
-        </div>
+      <div class="col">Left</div>
+      <div class="col">Middle</div>
+      <div class="col">Right</div>
     </div>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-        crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
